# svg2polylines

./: .gitignore  README.md
refs/: doc.md
refs/svg-to-dxf/: README.md
svg2polylines/: Cargo.toml  file-r12.dxf  file-r2004.dxf  file.dxf  file2.dxf
svg2polylines-ffi/: example.py
svg2polylines-ffi/src/: lib.rs
svg2polylines/examples/: basic.rs  preview.rs  svgproc.rs
svg2polylines/src/: lib.rs
