[package]
name = "svg2polylines"
description = "Convert SVG data to a list of polylines (aka polygonal chains or polygonal paths)."
version = "0.4.0"
repository = "https://github.com/dbrgn/svg2polylines"
license = "MIT OR Apache-2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
keywords = ["svg", "polyline", "robotics"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[features]
default = []
use_serde = ["serde", "serde_derive"]

[dependencies]
svgparser = "0.6"
log = "^0.4"
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
lyon_geom = "^0.11"
svg = "0.5.11"
haikunator = "^0.1"
dxf = "0.3.0"
geo = "0.9.1"
geo-types = "0.1.1"


[dev-dependencies]
env_logger = "^0.5"
serde_json = "^1.0"
piston_window = "^0.80"
piston2d-drag_controller = "^0.22"
